# trust-cpp

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  trusted-cpp.h
docs/: README.md  examples.md  installation.md
docs/ru/: examples.md  installation.md
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-UNITTEST.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-UNITTEST.bash  configurations.xml  project.xml
plugin/: CMakeLists.txt  trusted-cpp_clang.cpp  trusted-cpp_plugin.h
test/: CMakeLists.txt  _cycles.cpp  _example.cpp  memsafe_test.cpp  trusted-cpp_test.cpp
